BusOne/src/objects/Medical_Inquiry_vod__c.object
<CustomObject>
    <description>The Medical Inquiry object provides a mechanism to capture Physician based Product inquiries.  The Medical Inquiry records are typically passed to a 3rd party system for research and fulfillment via an integration.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents the Account that is requesting the Medical Inquiry.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Medical Inquiries</relationshipLabel>
        <relationshipName>Medical_Inquiry_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_vod__c</fullName>
        <description>Address Line 1 represents the first line of the Address.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_vod__c</fullName>
        <description>Address Line 2 represents the second line of the Address.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assign_To_User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to assign a new Medical Inquiry request to a specific User based on territory alignment of the Account. User list will be filtered to those Users who are assigned to the same territory as the Account on the Medical Inquiry record.</description>
        <label>Assign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medical_Inquiry_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Call is a reference field to the Call record from which the Medical Inquiry record was initiated. This reference value will be removed if the Call record is deleted.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Medical Inquiries</relationshipLabel>
        <relationshipName>Medical_Inquiries_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_vod__c</fullName>
        <description>City represents the City of the Address.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_vod__c</fullName>
        <description>The Country field stores the Country of the Medical record. The picklist values should match those of the Country field on the Address object.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>us</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method_vod__c</fullName>
        <description>The Delivery Method field displays a picklist of Delivery Options for the Medical Inquiry.  This field controls the display of the special zvod Delivery Control.</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent_Mail_vod</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Mail_vod</fullName>
                </value>
                <value>
                    <fullName>Phone_vod</fullName>
                </value>
                <value>
                    <fullName>Fax_vod</fullName>
                </value>
                <value>
                    <fullName>Email_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Stores a snapshot of the disclaimer that was presented to the user for the medical inquiry.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_vod__c</fullName>
        <description>E-mail field is used to store the E-mail value of the Medical Inquiry.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>This Veeva field ensures proper synchronization even after account merges or territory realignments.</description>
        <label>Entity Reference Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Number_vod__c</fullName>
        <description>Fax Number field is used to store the Fax Number value of the Medical Inquiry.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Created_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Medical Inquiry Fulfillment record has been created for the Medical Inquiry request and prevents subsequent Fulfillment records from being created.</description>
        <label>Fulfillment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Status_vod__c</fullName>
        <description>Used to provide visibility of the Fulfillment Status of a Medical Inquiry to Users that initiated the Medical Inqiury request.</description>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Assigned_vod</fullName>
                </value>
                <value>
                    <fullName>Completed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Count_vod__c</fullName>
        <description>Count of the number of inquiries in a group. Used by system.</description>
        <label>Group Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Identifier_vod__c</fullName>
        <description>If present, it is an identifier grouping multiple Medical Inquiries together.</description>
        <externalId>true</externalId>
        <label>Group Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Text__c</fullName>
        <description>Inquiry Text represents the question being asked by the Account.</description>
        <label>Inquiry Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Lock field is leveraged by VBioPharma to determine if the Medical Inquiry should be editable by a User.  If the Lock field is checked, then the record will only be editable by a User with Admin privileges.</description>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Medical Inquiry record was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>The Mobile ID field allows for the creation of Medical Inquiry records.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to modify a submitted Medical Inquiry without the need to unlock the record.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number_vod__c</fullName>
        <description>Phone Number field is used to store the Phone Number value of the Medical Inquiry. This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previously_Submitted_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Medical Inquiry was ever submitted. Once a Medical Inquiry is submitted, this field will always remain checked (enforced via trigger).</description>
        <label>Previously Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>The Product field represents the Product in question for the Medical Inquiry.</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cholecap</fullName>
                </value>
                <value>
                    <fullName>Restolar</fullName>
                </value>
                <value>
                    <fullName>Labrinone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receipt_Email_vod__c</fullName>
        <description>Email address used when sending an Approved Email Receipt</description>
        <label>Receipt Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark true to if a receipt was requested.</description>
        <label>Request Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rush_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rush Delivery is an example of a field that can be leveraged on Medical Inquiry.</description>
        <label>Rush Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>The Signature Date field represents the Date and Time that the Account signed for the Medical Inquiry.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>The Signature field stores the electronic signature of the requesting Account.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_vod__c</fullName>
        <description>State represents the State of the Address.  This field should not be added to the Page Layout as the special Delivery control wil display appropriately.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>The Status field represents the current Status of the Medical Inquiry.  This field should be marked as Read-Only on all Page Layouts.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New_vod</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By_Mobile_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Medical Inquery was submitted from a mobile transaction.</description>
        <label>Submitted By Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Zip represents the Zip Code of the Address.  This field should not be added to the Page Layout as the special Delivery control will display appropriately.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zvod_Delivery_Method_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The zvod_Delivery_Method_vod field represents the special VoD Control that will display the filtered Addresses, E-mai Addresses, Phone Numbers, and Fax Numbers for the Account.  Additionally, section signals are available to control whether a new value can be entered rather than selecting one of the above values.  Please reference the Administration Guide for more information on the Section Signals.</description>
        <label>zvod_Delivery_Method_vod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zvod_Disclaimer_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Disclaimer field will display the Disclaimer value from the VoD Message DISCLAIMER in the MEDINQUIRY category.  The Field Label will be displayed on the Page Layout and the text from the VoD Message will be displayed as the value.</description>
        <label>Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <label>Medical Inquiry</label>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Medical Inquiry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiries</pluralLabel>
    <recordTypes>
        <fullName>Medical_Inquiry</fullName>
        <active>true</active>
        <label>Medical Inquiry</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>